<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GoJobs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile_lowercase">Hồ sơ</string>
    <string name="title_profile_uppercase">HỒ SƠ</string>
    <string name="title_job_lowercase">Công việc</string>
    <string name="title_job_uppercase">CÔNG VIỆC</string>
    <string name="title_search_lowercase">Tìm kiếm</string>
    <string name="title_search_uppercase">TÌM KIẾM</string>
    <string name="title_feedback_lowercase">Phản hồi</string>
    <string name="title_feedback_uppercase">PHẢN HỒI</string>
    <string name="title_exit_uppercase">THOÁT</string>
    <string name="dialog_select_photo">SelectPhoto</string>
    <string name="msg_are_you_want_to_exit">Bạn có thực sự muốn thoát?</string>
    <string name="ok">OK</string>
    <string name="cancel">Hủy</string>
    <string name="title_auth_frag">Bạn là?</string>
    <string name="sub_title_auth_frag">Bạn là?</string>
    <string name="freelancer">Người tìm việc</string>
    <string name="employer">Nhà tuyển dụng</string>
    <string name="sign_up">Đăng ký</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="sign_in_with_email">Đăng nhập với Email</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="get_pass">Gửi liên kết</string>
    <string name="sign_in_for_freelancer">Người tìm việc</string>
    <string name="sign_in_for_employer">Nhà tuyển dụng</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="conti">Tiếp tục</string>
    <string name="first_name">Họ</string>
    <string name="last_name">Tên</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="answer_login">Bạn đã có tài khoản?</string>
    <string name="terms_of_service">Bằng cách đăng ký, bạn đã đồng ý với Điều khoản Dịch vụ và Chính sách Bảo mật của chúng tôi.</string>
    <string name="terms_of_service2">Bằng cách đăng nhập, bạn đã đồng ý với Điều khoản Dịch vụ và Chính sách Bảo mật của chúng tôi.</string>
    <string name="msg_password_length">Mật khẩu ít nhất phải có 6 ký tự.</string>
    <string name="msg_email_invalid">Email không đúng định dạng!</string>
    <string name="msg_email_cannot_be_null">Email không thể bỏ trống!</string>
    <string name="msg_password_cannot_be_null">Mật khẩu không thể bỏ trống</string>
    <string name="find_job">Tìm việc</string>
    <string name="freelancer_jobs">Freelancer jobs</string>
    <string name="application_sent">Gửi CV</string>
    <string name="apply_for_job">Ứng tuyển cho công việc</string>
    <string name="swipe_to_apply">Vuốt để xác nhận</string>
    <string name="application_sent_to_employer">CV của bạn đã được gửi đến Công ty. Chúng tôi sẽ thông báo cho bạn trong thời gian sớm nhất. Bạn có thể ứng tuyển vào các công việc ưa thích khác.</string>
    <string name="msg_update_profile_is_required" tools:ignore="ExtraTranslation">Để tiếp tục, bạn cần cập nhật hồ sơ!</string>
    <string name="msg_update_successfully">Cập nhật thành công!</string>
    <string name="msg_upload_successfully">Cập nhật thành công!</string>
    <string name="msg_upload_failed">Tải lên không thành công!</string>
    <string name="msg_employer_name_cannot_be_empty">Tên công ty không được bỏ trống!</string>
    <string name="msg_first_name_cannot_be_empty">Họ không được bỏ trống!</string>
    <string name="msg_last_name_cannot_be_empty">Tên không được bỏ trống!</string>
    <string name="msg_phone_cannot_be_empty">Số điện thoại không được bỏ trống!</string>
    <string name="msg_employer_type_cannot_be_empty">Loại hình doanh nghiệp không được bỏ trống!</string>
    <string name="msg_employer_address_cannot_be_empty">Địa chỉ không được bỏ trống!</string>
    <string name="msg_sex_cannot_be_empty">Giới tính không được bỏ trống!</string>
    <string name="msg_birthday_cannot_be_empty">Ngày sinh không được bỏ trống!</string>
    <string name="msg_under_15_years_old">Bạn đang dưới 15 tuổi!</string>
    <string name="msg_identify_number_cannot_be_empty">Số CMND không được bỏ trống!</string>
    <string name="title_take_photo">Tải ảnh lên</string>
    <string name="title_choose_from_library">Chọn từ thư viện ảnh</string>
    <string name="msg_confirm_maximum_image">Vượt quá độ dài tối đa</string>
    <string name="title_header_update_profile_freelancer">Cập nhật hồ sơ</string>
    <string name="complete">Hoàn thành</string>
    <string name="msg_you_have_not_entered_enough_information">Bạn chưa nhập đủ thông tin cần thiết</string>
    <string name="title_my_job_lowercase">Việc đã đăng tuyển</string>
    <string name="title_my_job_uppercase">VIỆC ĐÃ ĐĂNG TUYỂN</string>
    <string name="title_chat_lowercase">chat</string>
    <string name="title_chat_uppercase">CHAT</string>
    <string name="choose">Chọn</string>
    <string name="see_employer_profile">Xem hồ sơ Doanh nghiệp</string>
    <string name="withdraw_application">Rút lại CV</string>
    <string name="withdraw_info">Bằng cách nhấp vào nút bên dưới, đơn đăng ký của bạn sẽ được rút lại và bạn sẽ không đủ điều kiện để ứng tuyển.</string>
    <string name="you_already_have_a_job">Bạn đã tìm được công việc hôm nay rồi!</string>
    <string name="this_job_is_not_available">Công việc này hiện không khả dụng</string>
    <string name="close">Đóng</string>
    <string name="cancel_job">Hủy Việc</string>
    <string name="before_you_cancel">Trước khi bạn hủy...</string>
    <string name="cancel_note_to_employer">Vui lòng để lại lý do hủy yêu cầu ứng tuyển</string>
    <string name="cancel_info">Xin lưu ý rằng nếu bạn hủy việc đã ứng tuyển, bạn sẽ không thể đăng ký các việc khác trong cùng khung giờ. Điều này có thể ảnh hưởng đến cơ hội được tuyển dụng của bạn</string>
    <string name="apply_for_job_warnings">Hãy nhớ kiểm tra lịch của bạn vì việc hủy bỏ công việc đã xác nhận sẽ hiển thị trên hồ sơ của bạn và có thể gây bất lợi cho cơ hội có việc làm trong tương lai.</string>
    <string name="tc_title">Điều khoản dịch vụ</string>
    <string name="tc_part1_1">Chào mừng bạn đến với GoJobs (“Chúng tôi”)! Các Sản phẩm và Dịch vụ của Chúng tôi được cung cấp bởi Công ty Cổ phần GoJobs có trụ sở tại Lê Lai, Gò Vấp, TPHCM, Việt Nam. Chúng tôi hoạt động theo Pháp luật của nước Cộng Hòa Xã Hội Chủ Nghĩa Việt Nam (“Pháp luật”).</string>
    <string name="tc_part1_2">Bằng việc sử dụng Hệ thống của Chúng tôi, bao gồm nhưng không giới hạn các dịch vụ trên website www.gojobs.vn (“Website”) và Mobile App, bạn đang đồng ý với các Điều khoản sử dụng dưới đây. Do đó, bạn vui lòng đọc kĩ nội dung của Điều khoản sử dụng và đảm bảo rằng bạn đồng ý với tất cả các nội dung trước khi sử dụng bất kì Sản phẩm và Dịch vụ nào của Chúng tôi. Lưu ý rằng Chúng tôi có thể cập nhật và thay đổi các Điều khoản sử dụng mà không cần thông báo trước.</string>
    <string name="tc_title_part2">QUYỀN SỞ HỮU VÀ CHỦ SỞ HỮU</string>
    <string name="tc_part2_1">Toàn bộ dữ liệu và nội dung của Website hay Mobile App, bao gồm những không giới hạn mã nguồn, cấu trúc dữ liệu, giao diện thiết kế, thông tin Ứng viên và Nhà tuyển dụng, thông tin việc làm, các nhãn hiệu, logo, hình ảnh đều là Tài sản của Chúng tôi, các đơn vị liên kết của Chúng tôi và/hoặc khách hàng của Chúng tôi (“Chủ sở hữu”). Mọi hành vi được liệt kê sau đây, nếu như chưa được sự đồng ý bằng văn bản của Chúng tôi, đều được coi là hành vi xâm phạm đến quyền sở hữu hợp pháp của Chủ sở hữu: hành vi truy cập trái phép vào hệ thống; hành vi sao chép trái phép Tài sản; hành vi can thiệp, chỉnh sửa Tài sản vì bất kì mục đích nào; hành vi khai thác Tài sản vì mục đích thương mại. </string>
    <string name="tc_part2_2">Chúng tôi có quyền áp dụng biện pháp phòng ngừa, ngăn chặn các hành vi xâm phạm Quyền sở hữu thực hiện bởi bất kì cá nhân, tổ chức nào mà không cần báo trước. Trong trường hợp hành vi xâm phạm gây ra tổn thất về tài sản, dù là tài sản hữu hình hay vô hình, Chúng tôi bảo lưu quyền khởi kiện và yêu cầu các cá nhân, tổ chức đã thực hiện hành vi vi phạm bồi thường theo quy định của Pháp luật.</string>
    <string name="tc_title_part3">QUYỀN VÀ TRÁCH NHIỆM CỦA NGƯỜI SỬ DỤNG</string>
    <string name="tc_part3_1">Khi sử dụng Sản phẩm và Dịch vụ của Chúng tôi, bạn phải cam kết rằng mình có đủ năng lực hành vi và không phải là đối tượng bị hạn chế nhận các dịch vụ theo Pháp luật để xác lập một hợp đồng có tính ràng buộc này.</string>
    <string name="tc_part3_2">Bạn có quyền lựa chọn sử dụng các dịch vụ mà Chúng tôi cung cấp cho Người sử dụng, chẳng hạn như khởi tạo tài khoản, tạo hồ sơ thông tin, đăng tin tuyển dụng, tìm kiếm việc làm, nộp đơn ứng tuyển, mua các dịch vụ trả phí, sử dụng các tiện ích trên Website và Mobile App...</string>
    <string name="tc_part3_3">Bạn có quyền tiếp cận các thông tin mà Chúng tôi niêm yết, tuy nhiên cần lưu ý rằng việc khai thác, lưu trữ và chia sẻ các thông tin này phải tuân thủ các quy định của Pháp luật, Điều khoản sử dụng và Quy định bảo mật.</string>
    <string name="tc_part3_4">Khi đưa bất kì thông tin nào lên hệ thống GoJobs, bạn đang đồng ý rằng các thông tin đó không ở trạng thái cần bảo mật. Các thông tin này có thể được bên thứ Ba tiếp cận, sao chép, lưu trữ lại.</string>
    <string name="tc_part3_5">Bạn chịu trách nhiệm về tính xác thực và tính hợp pháp đối với toàn bộ thông tin do bạn đăng tải lên hệ thống GoJobs. Chúng tôi không có nghĩa vụ phải biết trước các nội dung bạn đăng tải đã được xác thực hay chưa. Do đó, trong trường hợp được Chúng tôi yêu cầu giải trình khi có nghi ngờ, bạn có nghĩa vụ chứng minh các thông tin bạn đăng tải là phù hợp và chính xác.</string>
    <string name="tc_part3_6_title">Những hành vi bị nghiêm cấm:</string>
    <string name="tc_part3_7">- Chống phá nhà nước CHXHCN Việt Nam.</string>
    <string name="tc_part3_8">- Xâm phạm quyền tự do cá nhân của người khác; và/hoặc làm nhục, phỉ báng, bôi nhọ người khác; và/hoặc gây phương hại hay gây bất lợi cho người khác.</string>
    <string name="tc_part3_9">- Truyền bá và phân phối thông tin cá nhân của bên thứ ba mà không được sự chấp thuận của họ.</string>
    <string name="tc_part3_10">- Sử dụng các từ ngữ, hình ảnh trái với truyền thống đạo đức của Việt Nam; </string>
    <string name="tc_part3_11">- Quảng cáo, tuyên truyền hàng hoá, dịch vụ thuộc danh mục cấm đã được Pháp luật quy định;</string>
    <string name="tc_part3_12">- Truyền đi những tập tin máy tính bị nhiễm virus gây hư hại hoạt động của các máy tính khác.</string>
    <string name="tc_part3_13">- Sử dụng các loại robot, nhện máy (spiders) và/hoặc bất kỳ thiết bị tự động nào, và/hoặc tự tay theo dõi và thu thập tài liệu của website cho bất kỳ mục đích tái sử dụng mà không được sự cho phép trước bằng văn bản của Chúng tôi.</string>
    <string name="tc_part3_14">- Sử dụng bất kỳ thiết bị, phần mềm và/hoặc tiến trình nào nhằm xâm phạm hoặc cố ý xâm phạm đến hoạt động của website.</string>
    <string name="tc_part3_15">- Bất kỳ hành động nào không hợp pháp và/hoặc bị cấm bởi các bộ luật tương ứng. </string>
    <string name="tc_part3_16_title">Những hành vi bị hạn chế:</string>
    <string name="tc_part3_17">- Gửi thư, email, thực hiện các cuộc gọi, hoặc gửi các bản fax không cần thiết nhằm khuyến khích và/hoặc quảng cáo sản phẩm hoặc dịch vụ tới người dùng khác trên hệ thống GoJobs;</string>
    <string name="tc_part3_18">- Sao chép và lưu trữ số lượng lớn thông tin người dùng vì mục đích không công khai;</string>
    <string name="tc_part3_19">- Thực hiện bất cứ những hành động nào áp đặt một lượng lớn không hợp lý hay không cân xứng trên hệ thống GoJobs;</string>
    <string name="tc_part3_20">- Nếu bạn được cấp quyền truy cập hay mật khẩu truy cập vào các vùng giới hạn của hệ thống GoJobs, việc chia sẻ quyền hay mật khẩu này cho bất kì người nào khác sẽ bị hạn chế;</string>
    <string name="tc_part4_title">QUYỀN VÀ TRÁCH NHIỆM CỦA CHÚNG TÔI</string>
</resources>