<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cảnh báo"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/white"
        android:padding="@dimen/_10sdp"
        android:gravity="center"
        android:background="@drawable/background_cyan_radius"/>


    <TextView
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/before_you_cancel"
        android:gravity="center"
        android:textSize="26sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#495057"
        android:paddingHorizontal="16dp"
        android:text="@string/cancel_info" />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/edtReason"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="18sp"
        android:ellipsize="end"
        android:minLines="1"
        android:lines="1"
        android:hint="@string/cancel_note_to_employer"
        android:background="@drawable/bg_corners"
        android:paddingLeft="10dp"
        android:backgroundTint="#ebebeb"
        android:layout_marginHorizontal="16dp"/>

</LinearLayout>