<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ViewFlipper
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="#444" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="108dp"
            android:layout_marginRight="108dp"
            android:gravity="center"
            android:paddingTop="30dp"
            android:text="@string/sub_title_auth_frag"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnFreelancer_authFrag"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_auth_frag"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/freelancer"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnEmployer_authFrag"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_auth_frag"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/employer"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

    </LinearLayout>
</FrameLayout>